# oncogenator

./: README.md  cgi_annotator.py  config.py  copy_number_annotator.py  external_annotator.py  local_annotator.py  main.py  oncokb_annotator.py  pyproject.toml  requirements.txt  somatic_variant_annotator.py  utils.py
backend/genomics/management/commands/: annotate_cnas.sh  annotate_snvs.sh  cgi_annotator.py  cna_annotation.sbatch  external_annotator.py  external_api_requests.py  oncokb_annotator.py  snv_annotation.sbatch  somatic_variant_annotator.py  wgs_data_adapter.py
slurm_scripts/: annotate_cnas.sh  annotate_snvs.sh  cna_annotation.sbatch  snv_annotation.sbatch
src/: cgi_annotator.py  copy_number_annotator.py  dedup.py  external_annotator.py  local_annotator.py  main.py  oncokb_annotator.py  somatic_variant_annotator.py  utils.py
